@@ -393,6 +393,14 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns whether there is an active animation (started with showWithEffect or hideWithEffect)
+        ///
+        /// @return Is an animation that shows or hides the widget playing?
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        bool isAnimationPlaying() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Places the widget before all other widgets
         ///
         /// @warning This function only has an effect when the widget was already added to its parent (e.g. the Gui).
