@@ -696,6 +696,13 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+    bool Widget::isAnimationPlaying() const
+    {
+        return !m_showAnimations.empty();
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
     void Widget::moveToFront()
     {
         if (m_parent)
