@@ -5,6 +5,7 @@ TGUI 0.8.7  (TBD)
 - Index as optional parameter in SignalItem (which was added in 0.8.6) didn't actually work yet
 - MenuItemClicked signal is now also emitted when clicking on menu that has no menu items
 - Added option to not replace existing widgets when loading widgets from file
+- Added isAnimationPlaying function to Widget (for the show and hide animations)
 
 
 TGUI 0.8.6  (13 October 2019)
